# billing-system

./: .codacy.yaml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/billing_system/application/: __init__.py
src/billing_system/application/dto/: __init__.py  invoice.py
src/billing_system/application/errors/: __init__.py  invoice_not_found.py
src/billing_system/application/protocols/: __init__.py  uow.py
src/billing_system/application/usecase/: __init__.py  add_line.py  create_invoice.py  get_invoices.py  issue_invoice.py  void_invoice.py
src/billing_system/domain/aggregates/: __init__.py  invoice.py
src/billing_system/domain/errors/: __init__.py  currency_mismatch.py  domain_error.py  invalid_invoice_line.py  invalid_money.py  invalid_quantity.py  invoice_currency_mismatch.py  invoice_not_found.py  invoice_not_unique.py  invoice_operation.py  negative_money.py
src/billing_system/domain/protocols/: __init__.py  clock.py
src/billing_system/domain/repositories/: __init__.py  invoice.py
src/billing_system/domain/value_objects/: __init__.py  currency.py  discount.py  invoice_id.py  invoice_line.py  invoice_status.py  money.py  tax.py
src/billing_system/infrastructure/: __init__.py
src/billing_system/infrastructure/api/: __init__.py  fastapi.py
src/billing_system/infrastructure/errors/: __init__.py  already_in_transaction.py  no_connection.py
src/billing_system/infrastructure/protocols/: __init__.py  sqlite_uow.py  system_clock.py
src/billing_system/infrastructure/repositories/: __init__.py  invoice_sqlite_repo.py
tests/: fake_clock.py  fake_uow.py  invoice_in_memory.py
tests/unit/: test_fastapi_adapter.py  test_invoice.py  test_invoice_line.py  test_invoice_repo.py  test_invoice_sql_repo.py  test_money.py  test_system_clock.py
