[project]
name = "billing-system"
version = "0.1.0"
description = "Пет-проект с надежной биллинг системой применяя современные методики"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.148.7",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ipython>=9.8.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D213",
    "D100",  # Missing module docstring 
    "D104",  # Missing public package docstring
    "D105",  # Missing magic method docstring
    "D106",  # Missing class __init__ docstring
    "D107",  # Missing __init__ docstring
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict = true

[[tool.mypy.overrides]]
module = ["tests.*", "test_*"]
strict = false
