[project]
name = "billing-system"
version = "0.1.0"
description = "Пет-проект с надежной биллинг системой применяя современные методики"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.148.7",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ipython>=9.8.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.bandit]
exclude_dirs = ["tests", "htmlcov", ".venv", "dist", "build"]
skips = ["B101"]

[tool.lizard]
exclude = ["tests/*", "htmlcov/*", ".venv/*", "dist/*", "build/*", "uv.lock"]
ignore_warnings = true

[tool.prospector]
ignore-paths = ["tests", "htmlcov", ".venv", "dist", "build"]
max-line-length = 79
profile = "strictness_veryhigh"

[tool.pylint.main]
ignore = ["tests", "htmlcov", ".venv", "dist", "build"]
ignore-paths = ["uv.lock"]
py-version = "3.12"
jobs = 0

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "D203",
    "D213",
    "TRY003",
    "EM101",
    "D100",  # Missing module docstring
    "D104",  # Missing public package docstring
    "D105",  # Missing magic method docstring
    "D106",  # Missing class __init__ docstring
    "D107",  # Missing __init__ docstring
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = False
warn_no_return = true
warn_unreachable = true
strict = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D101", "D102", "D103", "FBT001", "PT006"]
